--- a/html/tablas/etiquetas-principales.html
+++ b/html/tablas/etiquetas-principales.html
@@ -7,6 +7,7 @@
   <title>Etiquetas Principales de Tablas HTML</title>
   <link rel="shortcut icon" href="../../images/school.png" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="../../js/scripts.js"></script>
   <style>
     body {
       background: linear-gradient(135deg, #a29bfe 0%, #6c5ce7 100%);
@@ -495,7 +496,7 @@
       <div class="bg-white rounded-xl shadow-xl p-6">
         <div class="flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
           <a href="estructura-basica-tablas.html"
-            class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
+            class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
             ← Estructura Básica
           </a>
 
@@ -505,7 +506,7 @@
           </a>
 
           <a href="encabezados-celdas.html"
-            class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
+            class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
             Encabezados y Celdas →
           </a>
         </div>
