--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- Header -->
   <header class="text-center mb-12 fade-in-up">
     <h1 class="text-5xl font-bold text-white mb-4 float-animation">
-      📚 Historia y Fundamentos de HTML
+      📚 Escuela de Desarrollo Web
     </h1>
     <p class="text-xl text-blue-100 max-w-2xl mx-auto px-4">
       Un viaje interactivo por la evolución del lenguaje que cambió el mundo
@@ -506,6 +506,112 @@
           <p class="text-gray-600 mb-4">Crea una tarjeta con utilidades</p>
           <a href="tailwind/ejercicio-tailwind.html" class="inline-block bg-cyan-700 text-white px-4 py-2 rounded-lg hover:bg-cyan-800 transition-colors">
             Practicar →
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Git & GitHub Section -->
+  <div class="max-w-6xl mx-auto px-4 mt-16">
+    <div class="text-center mb-12 fade-in-up">
+      <h2 class="text-4xl font-bold text-white mb-4 float-animation">
+        🎓 Git & GitHub
+      </h2>
+      <p class="text-xl text-blue-100 max-w-2xl mx-auto px-4">
+        Control de versiones fácil para todos, no solo programadores
+      </p>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      
+      <!-- ¿Qué es esto? -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.1s">
+        <div class="bg-gradient-to-r from-purple-500 to-purple-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🤔 ¿Qué es esto?</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Descubre qué son Git y GitHub de forma simple</p>
+          <a href="git/que-es-git.html" class="inline-block bg-purple-500 text-white px-4 py-2 rounded-lg hover:bg-purple-600 transition-colors">
+            Descubrir →
+          </a>
+        </div>
+      </div>
+
+      <!-- Analogías -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.2s">
+        <div class="bg-gradient-to-r from-green-500 to-green-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🏠 Con ejemplos del día a día</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Entiende Git con comparaciones de la vida real</p>
+          <a href="git/analogias-git.html" class="inline-block bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition-colors">
+            Entender →
+          </a>
+        </div>
+      </div>
+
+      <!-- Plataformas -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.3s">
+        <div class="bg-gradient-to-r from-blue-500 to-blue-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🏢 Plataformas disponibles</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">GitHub, GitLab, Bitbucket y más opciones</p>
+          <a href="git/plataformas-git.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
+            Explorar →
+          </a>
+        </div>
+      </div>
+
+      <!-- ¿Cómo empiezo? -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.4s">
+        <div class="bg-gradient-to-r from-red-500 to-red-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🚀 ¿Cómo empiezo?</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Pasos simples para comenzar con Git</p>
+          <a href="git/como-empezar-git.html" class="inline-block bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition-colors">
+            Comenzar →
+          </a>
+        </div>
+      </div>
+
+      <!-- Pasos básicos -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.5s">
+        <div class="bg-gradient-to-r from-orange-500 to-orange-600 p-4 text-white">
+          <h3 class="text-xl font-bold">👣 Pasos básicos</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Los comandos esenciales que necesitas saber</p>
+          <a href="git/comandos-basicos-git.html" class="inline-block bg-orange-500 text-white px-4 py-2 rounded-lg hover:bg-orange-600 transition-colors">
+            Aprender →
+          </a>
+        </div>
+      </div>
+
+      <!-- Práctica simple -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.6s">
+        <div class="bg-gradient-to-r from-teal-500 to-teal-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🎯 Práctica simple</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Tu primer proyecto paso a paso</p>
+          <a href="git/practica-git.html" class="inline-block bg-teal-500 text-white px-4 py-2 rounded-lg hover:bg-teal-600 transition-colors">
+            Practicar →
+          </a>
+        </div>
+      </div>
+
+      <!-- Glosario -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.7s">
+        <div class="bg-gradient-to-r from-indigo-500 to-indigo-600 p-4 text-white">
+          <h3 class="text-xl font-bold">📚 Palabras clave</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Diccionario Git para principiantes</p>
+          <a href="git/glosario-git.html" class="inline-block bg-indigo-500 text-white px-4 py-2 rounded-lg hover:bg-indigo-600 transition-colors">
+            Consultar →
           </a>
         </div>
       </div>
