--- a/tailwind/ejercicio-tailwind.html
+++ b/tailwind/ejercicio-tailwind.html
@@ -53,9 +53,10 @@
         class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
         ← Clases Tailwind
       </a>
-      <div class="bg-gray-300 text-gray-500 px-4 py-2 rounded-lg opacity-50 text-center">
-        (Último tema)
-      </div>
+      <a href="../git/que-es-git.html"
+        class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors w-full sm:w-auto text-center">
+        ¿Qué es Git y GitHub? →
+      </a>
     </div>
   </nav>
 
@@ -626,9 +627,10 @@
             🏠 Menú Principal
           </a>
 
-          <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50 text-center">
-            (Último tema)
-          </div>
+         <a href="../git/que-es-git.html"
+            class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center sm:w-auto w-full">
+            ¿Qué es Git y GitHub? →
+          </a>
         </div>
       </div>
     </div>
